--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="content-center topmargin-lg">
       <br>
     <h1>#STAYHOME</h1>
-    <p >Aqui se muestra unicamente el <strong>stock</strong></p>
+    <p class="text-dark">Aqui se muestra unicamente el <strong>stock</strong></p>
       <a href="#section3" class="btn btn-light topmargin-sm"> Explore now <ion-icon name="eye-outline"></ion-icon></ion-icon></a>
   </div>
     
